<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PutBox2"
    android:background="#56FDD835">

    <TextView
        android:id="@+id/show"
        android:layout_width="149dp"
        android:layout_height="202dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="480dp"
        android:backgroundTint="#4D000000"
        android:text="000" />

    <TextView
        android:id="@+id/w1"
        android:layout_width="354dp"
        android:layout_height="195dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="476dp"
        android:text="@string/A1"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/a1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="300dp"
        android:clickable="true"
        android:backgroundTint="#FB8C00"
        android:onClick="myclick1"
        android:text="@string/tran1"

        />

    <Button
        android:id="@+id/a2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/a1"
        android:layout_marginTop="-6dp"
        android:backgroundTint="#FB8C00"
        android:clickable="true"
        android:onClick="myclick2"
        android:text="@string/tran2" />

    <Button
        android:id="@+id/a3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="#FB8C00"
        android:layout_below="@+id/a2"
        android:text="@string/tran3"

        android:clickable="true"
        android:onClick="myclick3"
        />
    <Button
        android:id="@+id/a4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/a3"
        android:text="@string/tran4"
        android:backgroundTint="#FB8C00"
        android:clickable="true"
        android:onClick="myclick4"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="next"
        android:textSize="20dp"
        android:layout_below="@+id/a4"
        android:backgroundTint="#FB8C00"
        android:layout_centerHorizontal="true"></Button>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="69dp"
        android:text="exit"
        android:backgroundTint="#FB8C00"
        android:textSize="20dp"></Button>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_star_big_on"
        android:text="收藏夹"
        android:backgroundTint="#FB8C00"
        android:id="@+id/fresh"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"

        ></Button>
</RelativeLayout>